--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   get: ^4.6.6
   animated_bottom_navigation_bar: ^1.3.0
+  audioplayers: ^5.2.1
 
 dev_dependencies:
   flutter_test:
@@ -61,9 +62,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+  #  - images/a_dot_burr.jpeg
+    - assets/sounds/france_capital.mp3
+    - assets/sounds/solar_system_planet.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
