--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   get: ^4.6.6
   animated_bottom_navigation_bar: ^1.3.0
   audioplayers: ^5.2.1
+  flutter_login: ^4.2.1
 
 dev_dependencies:
   flutter_test:
