--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   animated_bottom_navigation_bar: ^1.3.0
   audioplayers: ^5.2.1
   flutter_login: ^4.2.1
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.15.2
 
 dev_dependencies:
   flutter_test:
