--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_login: ^4.2.1
   firebase_core: ^2.24.2
   firebase_auth: ^4.15.2
+  cloud_firestore: ^4.13.5
 
 dev_dependencies:
   flutter_test:
